--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
   <div class="hero-container" data-aos="fade-in">
     <h1>Yuvraj Singh Panwar</h1>
-    <p>I'm <span class="typed" data-typed-items="Senior Software Engineer at Impetus Technologies India Pvt. Ltd., Java and Spring Boot Developer, Microservices Architect, Full Stack Developer"></span></p>
+    <p>I'm <span class="typed" data-typed-items="SSE at Impetus Technologies, Java and Spring Boot Developer, Microservices Architect, Full Stack Developer"></span></p>
   </div>
 </section>
 
