--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
+  <!-- Template CSS -->
   <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
@@ -37,11 +38,11 @@
 
     <div class="profile">
       <img src="assets/img/aa.jpg" alt="" class="img-fluid rounded-circle">
-      <h1 class="text-light"><a href="index.html">Yuvraj Singh Panwar</a></h1>
+      <h1 class="text-light"><a href="#hero">Yuvraj Singh Panwar</a></h1>
       <div class="social-links mt-3 text-center">
         <a href="https://github.com/" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://linkedin.com/in/yuvraj-singh-panwar" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="mailto:yuvrajsinghpanwar2829@gmail.com" class="google-plus"><i class="bx bx-envelope"></i></a>
+        <a href="mailto:yuvrajsinghpanwar2829@gmail.com"><i class="bx bx-envelope"></i></a>
       </div>
     </div>
 
@@ -52,6 +53,7 @@
         <li><a href="#skills"><i class="bx bx-code"></i> <span>Skills</span></a></li>
         <li><a href="#resume"><i class="bx bx-briefcase"></i> <span>Experience</span></a></li>
         <li><a href="#projects"><i class="bx bx-layer"></i> <span>Projects</span></a></li>
+        <li><a href="#achievements"><i class="bx bx-award"></i> <span>Achievements</span></a></li>
         <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
     </nav>
@@ -62,7 +64,8 @@
 <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
   <div class="hero-container" data-aos="fade-in">
     <h1>Yuvraj Singh Panwar</h1>
-    <p>I'm <span class="typed" data-typed-items="SSE at Impetus Technologies, Java and Spring Boot Developer, Microservices Architect, Full Stack Developer"></span></p>
+    <p>I'm <span class="typed"
+        data-typed-items="Senior Software Engineer at Impetus Technologies, Java & Spring Boot Developer, Microservices Architect, Full Stack Developer"></span></p>
   </div>
 </section>
 
@@ -72,39 +75,12 @@
 <section id="about" class="about">
   <div class="container">
     <div class="section-title">
-      <h2>About Me</h2>
+      <h2>Profile</h2>
       <p>
-        Full-Stack Software Engineer with 4+ years of experience building scalable backend systems 
-        and modern frontend applications using Java, Spring Boot, Microservices, and React.js.
-        Passionate about secure, high-performance enterprise solutions.
+        Full-Stack Software Engineer with 4+ years of experience in Java, Spring Boot, Microservices, and React.js.
+        Skilled at building scalable back-end systems and seamless user interfaces, delivering high-performance
+        applications that enhance user experience and business value.
       </p>
-    </div>
-
-    <div class="row">
-      <div class="col-lg-4" data-aos="fade-right">
-        <img src="assets/img/aa.jpg" class="img-fluid" alt="">
-      </div>
-      <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-        <h3>Professional Summary</h3>
-        <div class="row">
-          <div class="col-lg-6">
-            <ul>
-              <li><strong>Experience:</strong> 4+ Years</li>
-              <li><strong>Company:</strong> Impetus Technologies Pvt. Ltd.</li>
-              <li><strong>Role:</strong> Senior Software Engineer</li>
-              <li><strong>Location:</strong> Indore, India</li>
-            </ul>
-          </div>
-          <div class="col-lg-6">
-            <ul>
-              <li><strong>Primary Stack:</strong> Java, Spring Boot</li>
-              <li><strong>Frontend:</strong> React.js, Angular</li>
-              <li><strong>Cloud:</strong> AWS, Azure AD</li>
-              <li><strong>DevOps:</strong> Docker, Kubernetes</li>
-            </ul>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </section>
@@ -114,37 +90,18 @@
   <div class="container">
     <div class="section-title">
       <h2>Technical Skills</h2>
-      <p>Technologies and tools I work with</p>
     </div>
 
-    <div class="progress">
-      <span class="skill">Java / Spring Boot <i class="val">95%</i></span>
-      <div class="progress-bar-wrap">
-        <div class="progress-bar" role="progressbar" style="width:95%"></div>
-      </div>
-    </div>
+    <h5><strong>Languages:</strong></h5>
+    <p>Java 8, Java 17, JavaScript, C, C++, Python, SQL</p>
 
-    <div class="progress">
-      <span class="skill">Microservices & System Design <i class="val">90%</i></span>
-      <div class="progress-bar-wrap">
-        <div class="progress-bar" role="progressbar" style="width:90%"></div>
-      </div>
-    </div>
+    <h5><strong>Technologies:</strong></h5>
+    <p>Spring, Spring Boot, Spring Cloud, Hibernate, Spring Security, Spring Data JPA, Mockito, Kafka, Maven,
+      React.js, Angular, MySQL, MongoDB, Azure AD, AWS, Git, Docker, Kubernetes</p>
 
-    <div class="progress">
-      <span class="skill">React.js / Frontend <i class="val">85%</i></span>
-      <div class="progress-bar-wrap">
-        <div class="progress-bar" role="progressbar" style="width:85%"></div>
-      </div>
-    </div>
-
-    <div class="progress">
-      <span class="skill">AWS / Docker / Kubernetes <i class="val">80%</i></span>
-      <div class="progress-bar-wrap">
-        <div class="progress-bar" role="progressbar" style="width:80%"></div>
-      </div>
-    </div>
-
+    <h5><strong>CS Fundamentals:</strong></h5>
+    <p>Data Structures & Algorithms, OOPS, DBMS, REST APIs, Operating Systems, System Design,
+      Microservices, High-Level Design, Low-Level Design</p>
   </div>
 </section>
 
@@ -160,12 +117,25 @@
       <h5>July 2021 - Present</h5>
       <p><em>Impetus Technologies Pvt. Ltd., Indore</em></p>
       <ul>
-        <li>Led full-stack development for PatientKeeper healthcare management system.</li>
-        <li>Resolved 20+ critical security vulnerabilities safeguarding 10M+ patient records.</li>
-        <li>Migrated backend from Java 8 to Java 17 improving deployment speed by 30%.</li>
-        <li>Improved UI responsiveness by 40% through modernization.</li>
-        <li>Implemented OAuth2 authentication across platform in under 2 weeks.</li>
+        <li>Spearheaded development of full-stack features for PatientKeeper healthcare management system.</li>
+        <li>Resolved 20+ high-priority security vulnerabilities safeguarding 10M+ patient records and enabling Hi-Trust certification.</li>
+        <li>Migrated backend from Java 8 to Java 17 integrating Spring Boot, Spring Security, Hibernate & Maven resulting in 30% faster deployment cycles.</li>
+        <li>Upgraded legacy frontend (React.js, Backbone.js, Dojo, jQuery UI) improving UI responsiveness by ~40%.</li>
+        <li>Led OAuth2 authentication implementation across the project in under 2 weeks.</li>
       </ul>
+    </div>
+
+    <div class="resume-item">
+      <h4>Project Trainee</h4>
+      <h5>Mar 2021 – June 2021</h5>
+      <p><em>Impetus Technologies Pvt. Ltd.</em></p>
+      <ul>
+        <li>Conducted case study and implementation analysis of an Insurance Application.</li>
+      </ul>
+    </div>
+
+    <div class="section-title">
+      <h2>Education</h2>
     </div>
 
     <div class="resume-item">
@@ -185,9 +155,35 @@
       <h2>Projects</h2>
     </div>
 
-    <p><strong>TMWebServices:</strong> Production-ready REST framework in Java using annotations.</p>
-    <p><strong>CareTakers:</strong> Insurance web application built using Angular & Spring Boot + JPA.</p>
-    <p><strong>Smart Attendance:</strong> Face recognition attendance system using Python & OpenCV.</p>
+    <p><strong>TMWebServices:</strong> Production-quality RESTful web services framework written in Java enabling developers to build services using simple annotated Java methods without servlet knowledge.</p>
+
+    <p><strong>CareTakers:</strong> Insurance application supporting Life, Dental & Vision insurance. Built using Angular 8+ and Spring Boot with JPA. Database: MySQL.</p>
+
+    <p><strong>Smart Attendance:</strong> Python-based attendance system using OpenCV facial recognition to automatically mark attendance of registered students.</p>
+
+  </div>
+</section>
+
+<!-- Achievements -->
+<section id="achievements" class="resume">
+  <div class="container">
+
+    <div class="section-title">
+      <h2>Certifications</h2>
+    </div>
+    <ul>
+      <li>Spring Boot REST API</li>
+      <li>Spring Data JPA</li>
+    </ul>
+
+    <div class="section-title">
+      <h2>Qualities & Achievements</h2>
+    </div>
+    <ul>
+      <li>College Secretary (2018-19), Class Representative (2019-2021), House Captain during senior secondary.</li>
+      <li>Awarded "Star of the Month" 8 times for outstanding performance and contributions.</li>
+      <li>Received "iAppreciate" Award for successful OAuth integration delivery under tight deadline.</li>
+    </ul>
 
   </div>
 </section>
@@ -209,12 +205,9 @@
 
 <footer id="footer">
   <div class="container">
-    <div class="copyright">
-      &copy; 2026 <strong><span>Yuvraj Singh Panwar</span></strong>
-    </div>
+    &copy; 2026 <strong><span>Yuvraj Singh Panwar</span></strong>
   </div>
 </footer>
-
 
 <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
@@ -231,7 +224,7 @@
 <script src="assets/vendor/typed.js/typed.min.js"></script>
 <script src="assets/vendor/aos/aos.js"></script>
 
-<!-- Template Main JS File -->
+<!-- Template Main JS -->
 <script src="assets/js/main.js"></script>
 <script src="assets/js/my.js"></script>
 
