--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <div class="hero-container" data-aos="fade-in">
     <h1>Yuvraj Singh Panwar</h1>
     <p>I'm <span class="typed"
-        data-typed-items="Senior Software Engineer at Impetus Technologies, Java & Spring Boot Developer, Microservices Architect, Full Stack Developer"></span></p>
+        data-typed-items="SSE at Impetus Technologies, Java and Spring Boot Developer, Microservices Architect, Full Stack Developer"></span></p>
   </div>
 </section>
 
