--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
   </div>
 </header>
 
-<!-- Hero -->
 <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
   <div class="hero-container" data-aos="fade-in">
     <h1>Yuvraj Singh Panwar</h1>
@@ -71,7 +70,6 @@
 
 <main id="main">
 
-<!-- About -->
 <section id="about" class="about">
   <div class="container">
     <div class="section-title">
@@ -85,7 +83,6 @@
   </div>
 </section>
 
-<!-- Skills -->
 <section id="skills" class="skills section-bg">
   <div class="container">
     <div class="section-title">
@@ -105,7 +102,6 @@
   </div>
 </section>
 
-<!-- Experience -->
 <section id="resume" class="resume">
   <div class="container">
     <div class="section-title">
@@ -144,30 +140,23 @@
       <p><em>Mahakal Institute of Technology and Management (RGPV)</em></p>
       <p>CGPA: 9.0</p>
     </div>
-
   </div>
 </section>
 
-<!-- Projects -->
 <section id="projects" class="portfolio section-bg">
   <div class="container">
     <div class="section-title">
       <h2>Projects</h2>
     </div>
 
-    <p><strong>TMWebServices:</strong> Production-quality RESTful web services framework written in Java enabling developers to build services using simple annotated Java methods without servlet knowledge.</p>
-
-    <p><strong>CareTakers:</strong> Insurance application supporting Life, Dental & Vision insurance. Built using Angular 8+ and Spring Boot with JPA. Database: MySQL.</p>
-
-    <p><strong>Smart Attendance:</strong> Python-based attendance system using OpenCV facial recognition to automatically mark attendance of registered students.</p>
-
+    <p><strong>TMWebServices:</strong> Production-quality RESTful web services framework written in Java.</p>
+    <p><strong>CareTakers:</strong> Insurance application built using Angular & Spring Boot with MySQL.</p>
+    <p><strong>Smart Attendance:</strong> Python-based attendance system using OpenCV facial recognition.</p>
   </div>
 </section>
 
-<!-- Achievements -->
 <section id="achievements" class="resume">
   <div class="container">
-
     <div class="section-title">
       <h2>Certifications</h2>
     </div>
@@ -175,56 +164,52 @@
       <li>Spring Boot REST API</li>
       <li>Spring Data JPA</li>
     </ul>
-
-    <div class="section-title">
-      <h2>Qualities & Achievements</h2>
-    </div>
-    <ul>
-      <li>College Secretary (2018-19), Class Representative (2019-2021), House Captain during senior secondary.</li>
-      <li>Awarded "Star of the Month" 8 times for outstanding performance and contributions.</li>
-      <li>Received "iAppreciate" Award for successful OAuth integration delivery under tight deadline.</li>
-    </ul>
-
-  </div>
-</section>
-
-<!-- Contact -->
-<section id="contact" class="contact">
-  <div class="container">
-    <div class="section-title">
-      <h2>Contact</h2>
-    </div>
-
-    <p><strong>Email:</strong> yuvrajsinghpanwar2829@gmail.com</p>
-    <p><strong>Phone:</strong> +91 8770350480</p>
-    <p><strong>Location:</strong> Indore, India</p>
   </div>
 </section>
 
 </main>
 
 <footer id="footer">
-  <div class="container">
-    &copy; 2026 <strong><span>Yuvraj Singh Panwar</span></strong>
+  <div class="container text-center">
+
+    <h4>Contact</h4>
+
+    <p><strong>Email:</strong>
+      <a href="mailto:yuvrajsinghpanwar2829@gmail.com">
+        yuvrajsinghpanwar2829@gmail.com
+      </a>
+    </p>
+
+    <p><strong>Phone:</strong>
+      <a href="tel:+918770350480">
+        +91 8770350480
+      </a>
+    </p>
+
+    <p><strong>Location:</strong> Indore, India</p>
+
+    <div class="social-links mt-3">
+      <a href="https://github.com/" class="github"><i class="bx bxl-github"></i></a>
+      <a href="https://linkedin.com/in/yuvraj-singh-panwar" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      <a href="mailto:yuvrajsinghpanwar2829@gmail.com"><i class="bx bx-envelope"></i></a>
+    </div>
+
+    <hr>
+
+    <p>
+      &copy; 2026 <strong><span>Yuvraj Singh Panwar</span></strong>. All Rights Reserved
+    </p>
+
   </div>
 </footer>
 
 <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
-<!-- Vendor JS Files -->
 <script src="assets/vendor/jquery/jquery.min.js"></script>
 <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-<script src="assets/vendor/php-email-form/validate.js"></script>
-<script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-<script src="assets/vendor/counterup/counterup.min.js"></script>
-<script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-<script src="assets/vendor/venobox/venobox.min.js"></script>
-<script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
 <script src="assets/vendor/typed.js/typed.min.js"></script>
 <script src="assets/vendor/aos/aos.js"></script>
-
-<!-- Template Main JS -->
 <script src="assets/js/main.js"></script>
 <script src="assets/js/my.js"></script>
 
