--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <li><a href="#skills"><i class="bx bx-code"></i> <span>Skills</span></a></li>
         <li><a href="#resume"><i class="bx bx-briefcase"></i> <span>Experience</span></a></li>
         <li><a href="#projects"><i class="bx bx-layer"></i> <span>Projects</span></a></li>
+        <li><a href="#certifications"><i class="bx bx-certification"></i> <span>Certifications</span></a></li>
         <li><a href="#achievements"><i class="bx bx-award"></i> <span>Achievements</span></a></li>
         <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
@@ -60,6 +61,7 @@
   </div>
 </header>
 
+<!-- Hero -->
 <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
   <div class="hero-container" data-aos="fade-in">
     <h1>Yuvraj Singh Panwar</h1>
@@ -70,19 +72,20 @@
 
 <main id="main">
 
+<!-- About -->
 <section id="about" class="about">
   <div class="container">
     <div class="section-title">
       <h2>Profile</h2>
       <p>
         Full-Stack Software Engineer with 4+ years of experience in Java, Spring Boot, Microservices, and React.js.
-        Skilled at building scalable back-end systems and seamless user interfaces, delivering high-performance
-        applications that enhance user experience and business value.
+        Skilled at building scalable back-end systems and seamless user interfaces.
       </p>
     </div>
   </div>
 </section>
 
+<!-- Skills -->
 <section id="skills" class="skills section-bg">
   <div class="container">
     <div class="section-title">
@@ -95,13 +98,10 @@
     <h5><strong>Technologies:</strong></h5>
     <p>Spring, Spring Boot, Spring Cloud, Hibernate, Spring Security, Spring Data JPA, Mockito, Kafka, Maven,
       React.js, Angular, MySQL, MongoDB, Azure AD, AWS, Git, Docker, Kubernetes</p>
-
-    <h5><strong>CS Fundamentals:</strong></h5>
-    <p>Data Structures & Algorithms, OOPS, DBMS, REST APIs, Operating Systems, System Design,
-      Microservices, High-Level Design, Low-Level Design</p>
   </div>
 </section>
 
+<!-- Experience -->
 <section id="resume" class="resume">
   <div class="container">
     <div class="section-title">
@@ -113,20 +113,9 @@
       <h5>July 2021 - Present</h5>
       <p><em>Impetus Technologies Pvt. Ltd., Indore</em></p>
       <ul>
-        <li>Spearheaded development of full-stack features for PatientKeeper healthcare management system.</li>
-        <li>Resolved 20+ high-priority security vulnerabilities safeguarding 10M+ patient records and enabling Hi-Trust certification.</li>
-        <li>Migrated backend from Java 8 to Java 17 integrating Spring Boot, Spring Security, Hibernate & Maven resulting in 30% faster deployment cycles.</li>
-        <li>Upgraded legacy frontend (React.js, Backbone.js, Dojo, jQuery UI) improving UI responsiveness by ~40%.</li>
-        <li>Led OAuth2 authentication implementation across the project in under 2 weeks.</li>
-      </ul>
-    </div>
-
-    <div class="resume-item">
-      <h4>Project Trainee</h4>
-      <h5>Mar 2021 – June 2021</h5>
-      <p><em>Impetus Technologies Pvt. Ltd.</em></p>
-      <ul>
-        <li>Conducted case study and implementation analysis of an Insurance Application.</li>
+        <li>Spearheaded development of full-stack features.</li>
+        <li>Resolved high-priority security vulnerabilities.</li>
+        <li>Migrated backend from Java 8 to Java 17.</li>
       </ul>
     </div>
 
@@ -143,19 +132,21 @@
   </div>
 </section>
 
+<!-- Projects -->
 <section id="projects" class="portfolio section-bg">
   <div class="container">
     <div class="section-title">
       <h2>Projects</h2>
     </div>
 
-    <p><strong>TMWebServices:</strong> Production-quality RESTful web services framework written in Java.</p>
-    <p><strong>CareTakers:</strong> Insurance application built using Angular & Spring Boot with MySQL.</p>
-    <p><strong>Smart Attendance:</strong> Python-based attendance system using OpenCV facial recognition.</p>
+    <p><strong>TMWebServices:</strong> RESTful web services framework written in Java.</p>
+    <p><strong>CareTakers:</strong> Insurance application built using Angular and Spring Boot.</p>
+    <p><strong>Smart Attendance:</strong> Python-based attendance system using OpenCV.</p>
   </div>
 </section>
 
-<section id="achievements" class="resume">
+<!-- Certifications -->
+<section id="certifications" class="resume">
   <div class="container">
     <div class="section-title">
       <h2>Certifications</h2>
@@ -167,49 +158,57 @@
   </div>
 </section>
 
+<!-- Achievements -->
+<section id="achievements" class="resume">
+  <div class="container">
+    <div class="section-title">
+      <h2>Achievements</h2>
+    </div>
+    <ul>
+      <li>College Secretary (2018-19), Class Representative (2019-2021).</li>
+      <li>Awarded "Star of the Month" 8 times.</li>
+      <li>Received "iAppreciate" Award for OAuth integration delivery.</li>
+    </ul>
+  </div>
+</section>
+
+<!-- Contact -->
+<section id="contact" class="contact">
+  <div class="container">
+    <div class="section-title">
+      <h2>Contact</h2>
+    </div>
+
+    <p><strong>Email:</strong> yuvrajsinghpanwar2829@gmail.com</p>
+    <p><strong>Phone:</strong> +91 8770350480</p>
+    <p><strong>Location:</strong> Indore, India</p>
+  </div>
+</section>
+
 </main>
 
 <footer id="footer">
-  <div class="container text-center">
-
-    <h4>Contact</h4>
-
-    <p><strong>Email:</strong>
-      <a href="mailto:yuvrajsinghpanwar2829@gmail.com">
-        yuvrajsinghpanwar2829@gmail.com
-      </a>
-    </p>
-
-    <p><strong>Phone:</strong>
-      <a href="tel:+918770350480">
-        +91 8770350480
-      </a>
-    </p>
-
-    <p><strong>Location:</strong> Indore, India</p>
-
-    <div class="social-links mt-3">
-      <a href="https://github.com/" class="github"><i class="bx bxl-github"></i></a>
-      <a href="https://linkedin.com/in/yuvraj-singh-panwar" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      <a href="mailto:yuvrajsinghpanwar2829@gmail.com"><i class="bx bx-envelope"></i></a>
-    </div>
-
-    <hr>
-
-    <p>
-      &copy; 2026 <strong><span>Yuvraj Singh Panwar</span></strong>. All Rights Reserved
-    </p>
-
+  <div class="container">
+    &copy; 2026 <strong><span>Yuvraj Singh Panwar</span></strong>
   </div>
 </footer>
 
 <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
+<!-- Vendor JS Files -->
 <script src="assets/vendor/jquery/jquery.min.js"></script>
 <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+<script src="assets/vendor/php-email-form/validate.js"></script>
+<script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+<script src="assets/vendor/counterup/counterup.min.js"></script>
+<script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+<script src="assets/vendor/venobox/venobox.min.js"></script>
+<script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
 <script src="assets/vendor/typed.js/typed.min.js"></script>
 <script src="assets/vendor/aos/aos.js"></script>
+
+<!-- Template Main JS -->
 <script src="assets/js/main.js"></script>
 <script src="assets/js/my.js"></script>
 
