--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
   <link href="assets/img/apple-touch-icon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Raleway:300,400,600,700|Poppins:300,400,500,600,700" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
@@ -23,7 +21,6 @@
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
-  <!-- Template CSS -->
   <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
@@ -49,63 +46,64 @@
     <nav class="nav-menu">
       <ul>
         <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
-        <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
+        <li><a href="#about"><i class="bx bx-user"></i> <span>Profile</span></a></li>
         <li><a href="#skills"><i class="bx bx-code"></i> <span>Skills</span></a></li>
         <li><a href="#resume"><i class="bx bx-briefcase"></i> <span>Experience</span></a></li>
         <li><a href="#projects"><i class="bx bx-layer"></i> <span>Projects</span></a></li>
         <li><a href="#certifications"><i class="bx bx-certification"></i> <span>Certifications</span></a></li>
-        <li><a href="#achievements"><i class="bx bx-award"></i> <span>Achievements</span></a></li>
+        <li><a href="#achievements"><i class="bx bx-award"></i> <span>Qualities & Achievements</span></a></li>
         <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
     </nav>
   </div>
 </header>
 
-<!-- Hero -->
 <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
   <div class="hero-container" data-aos="fade-in">
     <h1>Yuvraj Singh Panwar</h1>
     <p>I'm <span class="typed"
-        data-typed-items="SSE at Impetus Technologies, Java and Spring Boot Developer, Microservices Architect, Full Stack Developer"></span></p>
+        data-typed-items="Senior Software Engineer, Java Developer, Spring Boot Developer, Microservices Developer, Full Stack Developer"></span></p>
   </div>
 </section>
 
 <main id="main">
 
-<!-- About -->
 <section id="about" class="about">
   <div class="container">
     <div class="section-title">
       <h2>Profile</h2>
       <p>
         Full-Stack Software Engineer with 4+ years of experience in Java, Spring Boot, Microservices, and React.js.
-        Skilled at building scalable back-end systems and seamless user interfaces.
+        Skilled at building scalable back-end systems and seamless user interfaces, delivering high-performance applications
+        that enhance user experience and business value.
       </p>
     </div>
   </div>
 </section>
 
-<!-- Skills -->
 <section id="skills" class="skills section-bg">
   <div class="container">
     <div class="section-title">
-      <h2>Technical Skills</h2>
+      <h2>Skills</h2>
     </div>
 
     <h5><strong>Languages:</strong></h5>
-    <p>Java 8, Java 17, JavaScript, C, C++, Python, SQL</p>
+    <p>JAVA 8, JAVA 17, JavaScript, C, C++, Python, SQL.</p>
 
     <h5><strong>Technologies:</strong></h5>
     <p>Spring, Spring Boot, Spring Cloud, Hibernate, Spring Security, Spring Data JPA, Mockito, Kafka, Maven,
-      React.js, Angular, MySQL, MongoDB, Azure AD, AWS, Git, Docker, Kubernetes</p>
+      React.js, Angular, MySql, MongoDb, Azure AD, Amazon Web Services (AWS), Git, Docker, Kubernetes.</p>
+
+    <h5><strong>CS Fundamentals:</strong></h5>
+    <p>Data Structures and Algorithms, OOPS, DBMS, REST APIs, Operating Systems, System Design,
+      Microservices, High-Level Design, Low-Level Design.</p>
   </div>
 </section>
 
-<!-- Experience -->
 <section id="resume" class="resume">
   <div class="container">
     <div class="section-title">
-      <h2>Professional Experience</h2>
+      <h2>Experience</h2>
     </div>
 
     <div class="resume-item">
@@ -113,9 +111,20 @@
       <h5>July 2021 - Present</h5>
       <p><em>Impetus Technologies Pvt. Ltd., Indore</em></p>
       <ul>
-        <li>Spearheaded development of full-stack features.</li>
-        <li>Resolved high-priority security vulnerabilities.</li>
-        <li>Migrated backend from Java 8 to Java 17.</li>
+        <li>Spearheaded development of full-stack features for the PatientKeeper healthcare management system.</li>
+        <li>Resolved 20+ high-priority security vulnerabilities, safeguarding sensitive health records of 10M+ patients, and enabling the client to achieve Hi-Trust Certification ahead of schedule.</li>
+        <li>Migrated and modernized the backend tech stack from Java 8 to Java 17, integrating Spring Boot, Spring Security, Hibernate, and Maven, resulting in 30% faster deployment cycles and improved maintainability.</li>
+        <li>Upgraded legacy front-end frameworks, including React.js, Backbone.js, Dojo, and jQuery UI, reducing technical debt and improving UI responsiveness by ~40%.</li>
+        <li>Led and deployed an OAuth2-based authentication mechanism across the whole project in under 2 weeks, improving login security.</li>
+      </ul>
+    </div>
+
+    <div class="resume-item">
+      <h4>Project Trainee</h4>
+      <h5>Mar 2021 – June 2021</h5>
+      <p><em>Impetus Technologies Pvt. Ltd.</em></p>
+      <ul>
+        <li>Made a case study on Insurance Application.</li>
       </ul>
     </div>
 
@@ -125,54 +134,51 @@
 
     <div class="resume-item">
       <h4>Bachelor of Technology</h4>
-      <h5>2017 - 2021</h5>
+      <h5>2017-2021</h5>
       <p><em>Mahakal Institute of Technology and Management (RGPV)</em></p>
       <p>CGPA: 9.0</p>
     </div>
   </div>
 </section>
 
-<!-- Projects -->
 <section id="projects" class="portfolio section-bg">
   <div class="container">
     <div class="section-title">
       <h2>Projects</h2>
     </div>
 
-    <p><strong>TMWebServices:</strong> RESTful web services framework written in Java.</p>
-    <p><strong>CareTakers:</strong> Insurance application built using Angular and Spring Boot.</p>
-    <p><strong>Smart Attendance:</strong> Python-based attendance system using OpenCV.</p>
+    <p><strong>TMWebServices:</strong> A web services framework. RESTful web services framework written in JAVA is a production-quality framework for developing RESTful web services in JAVA. Without knowledge of servlets one can write web services, just by writing methods in JAVA and by providing proper annotations on them.</p>
+
+    <p><strong>CareTakers:</strong> An Insurance Application Website. Care Takers is an insurance provider which provide three types of insurance: Life, Dental and Vision. Developed in Angular 8+ and Java Spring Boot + JPA. DB used is MySql.</p>
+
+    <p><strong>Smart Attendance:</strong> An Attendance Management Software. This Software written in Python is smart software which can take attendance just by scanning and recognizing the faces of registered students. Developed by using OpenCV library.</p>
   </div>
 </section>
 
-<!-- Certifications -->
 <section id="certifications" class="resume">
   <div class="container">
     <div class="section-title">
       <h2>Certifications</h2>
     </div>
     <ul>
-      <li>Spring Boot REST API</li>
-      <li>Spring Data JPA</li>
+      <li>SpringBoot Rest APi, Spring Data JPA.</li>
     </ul>
   </div>
 </section>
 
-<!-- Achievements -->
 <section id="achievements" class="resume">
   <div class="container">
     <div class="section-title">
-      <h2>Achievements</h2>
+      <h2>Qualities and Achievements</h2>
     </div>
     <ul>
-      <li>College Secretary (2018-19), Class Representative (2019-2021).</li>
-      <li>Awarded "Star of the Month" 8 times.</li>
-      <li>Received "iAppreciate" Award for OAuth integration delivery.</li>
+      <li>Leadership and Team Work, I was college secretary in 2018-19, A Class Representative (2019-2021). I was house captain of Shiva ji house in school throughout my senior secondary academics.</li>
+      <li>Awarded ’Star of the Month’ 8 times for outstanding performance and contributions.</li>
+      <li>"iAppreciate" Award for successful delivery of OAuth integration under a tight deadline</li>
     </ul>
   </div>
 </section>
 
-<!-- Contact -->
 <section id="contact" class="contact">
   <div class="container">
     <div class="section-title">
@@ -195,7 +201,6 @@
 
 <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
-<!-- Vendor JS Files -->
 <script src="assets/vendor/jquery/jquery.min.js"></script>
 <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
@@ -208,7 +213,6 @@
 <script src="assets/vendor/typed.js/typed.min.js"></script>
 <script src="assets/vendor/aos/aos.js"></script>
 
-<!-- Template Main JS -->
 <script src="assets/js/main.js"></script>
 <script src="assets/js/my.js"></script>
 
