--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <div class="hero-container" data-aos="fade-in">
     <h1>Yuvraj Singh Panwar</h1>
     <p>I'm <span class="typed"
-        data-typed-items="Senior Software Engineer, Java Developer, Spring Boot Developer, Microservices Developer, Full Stack Developer"></span></p>
+        data-typed-items="Senior Software Engineer, Java and Spring Boot Developer, Microservices Developer, Full Stack Developer"></span></p>
   </div>
 </section>
 
