--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <ul>
       <li>Leadership and Team Work, I was college secretary in 2018-19, A Class Representative (2019-2021). I was house captain of Shiva ji house in school throughout my senior secondary academics.</li>
       <li>Awarded ’Star of the Month’ 8 times for outstanding performance and contributions.</li>
-      <li>"iAppreciate" Award for successful delivery of OAuth integration under a tight deadline</li>
+      <li>"iAppreciate" Award two times for successful delivery of OAuth integration under a tight deadline and for Hi-Trust certification.</li>
     </ul>
   </div>
 </section>
